# dauber

./: CHANGELOG.md  CLAUDE.md  NEXT_STEPS.md  README.md  flake.nix  justfile  pyproject.toml
.claude/commands/assess/: ai-pass.md  refine.md  setup.md  submit.md
.claude/commands/assignments/: create.md
.claude/commands/content/: publish.md
.claude/commands/course/: overview.md  setup.md
.claude/commands/discuss/: announce.md
.claude/commands/grading/: overview.md
.claude/commands/rubrics/: create.md
.github/workflows/: ci.yml
.pi/skills/assess-ai-pass/: SKILL.md
.pi/skills/assess-refine/: SKILL.md
.pi/skills/assess-setup/: SKILL.md
.pi/skills/assess-submit/: SKILL.md
.pi/skills/assignments-create/: SKILL.md
.pi/skills/content-publish/: SKILL.md
.pi/skills/course-overview/: SKILL.md
.pi/skills/course-setup/: SKILL.md
.pi/skills/discuss-announce/: SKILL.md
logs/: brainstorm-2026-02-25.md  weekly-review-2026-02-22.md  weekly-review-2026-03-18.md
specs/: implementation.md  pi-skills-support.md  planning.md  progress.md
tests/: conftest.py  test_smoke.py
tests/cli/: test_assessments.py  test_assignments.py  test_commands.py  test_config.py  test_config_defaults.py  test_courses.py  test_discussions.py  test_grading.py  test_modules.py  test_output.py  test_pages.py  test_rubrics.py
tests/core/: test_cache.py  test_client.py  test_config.py  test_config_files.py
tests/services/: test_assessments.py  test_assignments.py  test_courses.py  test_discussions.py  test_grading.py  test_modules.py  test_pages.py  test_rubrics.py
(+26 files in other folders)
