[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dauber"
version = "0.1.8"
description = "Command-line interface for the Canvas LMS API"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Jerid Francom", email = "francojc@wfu.edu" },
]
keywords = ["canvas", "lms", "cli", "grading", "courses", "academic", "teaching"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "typer>=0.15",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "python-dateutil>=2.9",
  "rich>=13.0",
  "tomli-w>=1.0",
  "python-docx>=1.1",
  "pypdf>=4.0",
]

[project.urls]
Homepage = "https://github.com/francojc/dauber"
Repository = "https://github.com/francojc/dauber"
Changelog = "https://github.com/francojc/dauber/blob/main/CHANGELOG.md"

[project.scripts]
dauber = "dauber.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dauber"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=6.0", "ruff>=0.8"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
